--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,11 @@
 development:
-  adapter: postgresql
-  database: react_rails_test_dev
+  adapter: mysql2
+  database: lookstaging
   pool: 5
   timeout: 5000
 test:
-  adapter: postgresql
-  database: react_rails_test_test
+  adapter: mysql2
+  database: lookstaging
   pool: 5
   timeout: 5000
 
