--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,18 @@
 development:
-  adapter: postgres
-  database: dev
+  adapter: mysql2
+  database: lookstaging
   pool: 5
   timeout: 5000
 test:
-  adapter: postgres
-  database: test
+  adapter: mysql2
+  database: lookstaging
   pool: 5
   timeout: 5000
 
 production:
-  adapter: postgres
+  adapter: mysql2
   encoding: utf8
-  database: prod
+  database: lookstaging
+  socket: /tmp/mysql.sock
   pool: 5
+  timeout: 5000
